--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://pirialmersus.github.io/searchGitHubUser",
   "name": "find-github-user",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,6 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
